# GameBoy-Emulator

./: CMakeLists.txt  main.c  run.bat
include/: bus.h  common.h  cpu.h  dbg.h  instructions.h  io.h  memory.h  opcode.h  ram.h
lib/: bus.c  cpu.c  dbg.c  instructions.c  io.c  memory.c  opcode.c  ram.c
